--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: EvidenceCalcUsingRstan
-Title: Calculate the Evidence of an Stan Model 
+Title: Calculate the Evidence of an slightly modified Stan Model 
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Luciano",
@@ -7,8 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "lmoffatt@gmail.com",
            comment = c(ORCID = "0000-0003-4994-4304"))
-Description: Calculates the Evidence of a statistical model build in stan language by thermodynamic integration. 
-The stan model has to be tuned in this purpose.
+Description: Calculates the Evidence of a statistical model build in stan language by thermodynamic integration. The stan model has to be tuned in this purpose.
 License: `use_mit_license()`
 Encoding: UTF-8
 LazyData: true
